丧心病狂版本

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="script.js"></script>
 	</head>
-<body onload="setCanvas()">
-	<canvas id="bg-canvas"></canvas>
+<body onload="show('topsite')">
+	<video src="bad_apple.mp4" autoplay="autoplay" loop="loop" controls="controls">
+		Your Browser Do Not Support MPEG Video!
+	</video>
 	<div id="main">
 		<div id="menu">
 			<div class="mitem" onclick="show('topsite', this);">Top Site</div>
