新窗口中打开(建议BySenorSen)

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
 		</div>
 
 		<div class="hide" id="topsite">
-			<div class="linkblock"><div class="link"><a href="http://www.zju.edu.cn/" id="To_Baidu">浙大</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://libweb.zju.edu.cn/libweb/">图书馆</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://luckweb.057101.com/">缘网</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://luckweb.057101.com/bt2/">BT</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.zju88.org/">88</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.zju88.org/agent/top10.do">十大</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.cc98.org/">cc98</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.cc98.org/hottopic.asp">十大</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://zupo.zju.edu.cn/">办公网</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://zupo.zju.edu.cn/redir.php?catalog_id=32182">校车</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.qsc.zju.edu.cn/">求是潮</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.qsc.zju.edu.cn/index.php/category/new/">新闻</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.zju.edu.cn/" id="To_Baidu">浙大</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://libweb.zju.edu.cn/libweb/">图书馆</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://luckweb.057101.com/">缘网</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://luckweb.057101.com/bt2/">BT</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.zju88.org/">88</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.zju88.org/agent/top10.do">十大</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.cc98.org/">cc98</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.cc98.org/hottopic.asp">十大</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://zupo.zju.edu.cn/">办公网</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://zupo.zju.edu.cn/redir.php?catalog_id=32182">校车</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.qsc.zju.edu.cn/">求是潮</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.qsc.zju.edu.cn/index.php/category/new/">新闻</a></div></div>
 		</div>
 
 		<div class="hide" id="ls1">
-			<div class="linkblock"><div class="link"><a href="http://www.su.zju.edu.cn/" >学生会</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://ygb.zju.edu.cn/guweb/" >研会</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://ygb.zju.edu.cn/zjudu/" >博士生会</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://zjupdoc.zju.edu.cn/" >博士后</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://redcross.zju.edu.cn/" >红会</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://ygb.zju.edu.cn/yanchuang/" >研创</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://ygb.zju.edu.cn/fec/" >未企</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://10.202.70.31/qnzyz/v3/" >志愿者</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://www.card.zju.edu.cn/praa/" class="red">三农</a></div></div>
-			<div class="linkblock"><div class="link"><a href="http://10.202.70.31/shetuan/index.asp" >社联</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.su.zju.edu.cn/" >学生会</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://ygb.zju.edu.cn/guweb/" >研会</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://ygb.zju.edu.cn/zjudu/" >博士生会</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://zjupdoc.zju.edu.cn/" >博士后</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://redcross.zju.edu.cn/" >红会</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://ygb.zju.edu.cn/yanchuang/" >研创</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://ygb.zju.edu.cn/fec/" >未企</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://10.202.70.31/qnzyz/v3/" >志愿者</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://www.card.zju.edu.cn/praa/" class="red">三农</a></div></div>
+			<div class="linkblock"><div class="link"><a target="_blank" href="http://10.202.70.31/shetuan/index.asp" >社联</a></div></div>
 		</div>
 	</div>
 </body>
